[project]
name = "cloud-storage"
version = "1.0.0"
description = "A cloud storage service built with FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.131.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.21",
    "sqlalchemy[postgresql-asyncpg]>=2.0.48",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = ["ruff>=0.15.6"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"
exclude = ['migrations/versions/*']

[tool.ruff.lint]
select = [
    'ANN',
    'B',
    'COM',
    'C4',
    'DTZ',
    'SIM',
    'ARG',
    'PTH',
    'I',
    'N',
    'E',
    'W',
    'F',
    'UP',
    'PL',
    'FURB',
    'RUF',
]
ignore = ['ANN201', 'COM812']

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
